<resources>
    <string name="app_name">ScheActim</string>
    <string name="welcome_desc">Organiza tus días... para disfrutar la vida</string>
    <string name="start">EMPECEMOS</string>
    <string name="banner">Banner</string>
    <string name="empecemos">¡Empecemos!</string>
    <string name="fullname">Nombre completo</string>
    <string name="email">Correo electrónico</string>
    <string name="fullname_sample">Ejemplo: Josue Daniel</string>
    <string name="email_sample">Ejemplo: josuedaniel@mail.com</string>
    <string name="signUp">¡REGISTRARSE!</string>
    <string name="help_cta_content">¿Tienés alguna duda? contáctanos</string>
    <string name="descripcion">descripcion</string>
    <string name="category">categoría</string>
    <string name="welcome_user_title">Bienvenido, %s</string>
    <string name="cannot_get_email">No pudimos obtener el email :(</string>
    <string name="permisos_de_la_aplicacion">Permisos de la Aplicacion</string>
    <string name="frasePermitir">¿Quieres permitir que ScheActim acceda a tu calendario?</string>
    <string name="permitir">PERMITIR</string>
    <string name="denegar">DENEGAR</string>
    <string name="panel_de_actividades">Panel de Actividades</string>
    <string name="Nombre">Nombre de Actividad</string>
    <string name="descripcionPanel">Descripción</string>
    <string name="prioridad">Prioridad</string>
    <string name="fecha_inicio">Fecha Inicio</string>
    <string name="fecha_fin">Fecha Fin</string>
    <string name="guardar">Guardar</string>
    <string name="eliminar">Eliminar</string>
    <string name="add">Agregar</string>
    <string name="entry_saved">"Actividad Guardada con exito "</string>
    <string name="error_saving_entry">Disculpa, ha ocurrido un error al guardar la entrada, intenta nuevamente.</string>
    <string name="no_data">Lista Vacia</string>
    <string name="sample_long_text">LoremIpsumLoremIpsumNumberIpsum</string>
    <string name="vista_diaria">Vista Diaria</string>
    <string name="vista_semanal">Vista Semanal</string>
    <string name="home">Inicio</string>
    <string name="ver_actividad">Ver Actividades</string>
    <string name="vista_kanban">Vista Kanban</string>
    <string name="tiempo_invertido">Tiempo Invertido</string>
    <string name="guardar_actividad">Guardar Actividades</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="correo">carloseliaslopez@gmail.com</string>

</resources>