<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup">

    <ImageView
        android:id="@+id/iv_hero"
        android:layout_width="350dp"
        android:layout_height="210dp"
        android:contentDescription="@string/banner"
        android:scaleType="centerInside"
        android:src="@drawable/calendar"
        app:layout_constraintBottom_toTopOf="@id/tv_title"
        app:layout_constraintDimensionRatio="h,3:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empecemos"
        style="@style/AppTheme.Base.Title1"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/iv_hero"
        app:layout_constraintRight_toRightOf="@id/iv_hero"
        app:layout_constraintTop_toBottomOf="@id/iv_hero"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/til_fullname"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/fullname"
        app:helperText="@string/fullname_sample"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="textPersonName"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/til_email"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        app:helperText="@string/email_sample"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="@id/til_fullname"
        app:layout_constraintEnd_toEndOf="@id/til_fullname"
        app:layout_constraintTop_toBottomOf="@id/til_fullname">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:backgroundTint="@color/colorPurple"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="32dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email"
        app:layout_constraintBottom_toTopOf="@id/btn_help"
        />

    <Button
        android:id="@+id/btn_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_cta_content"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="32dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@android:color/holo_blue_dark"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>