<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.GuardarActividadFragment">

    <TextView
        android:id="@+id/Panel"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/panel_de_actividades"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        android:textColor="@color/purple_700"

        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="@id/iv_hero"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="RtlCompat" />

    <ImageView
        android:id="@+id/iv_hero"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:contentDescription="@string/banner"
        android:scaleType="centerInside"
        android:src="@drawable/book_icon"
        android:layout_marginTop="20dp"
        android:layout_marginRight="290dp"
        app:layout_constraintHorizontal_bias="0.496"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginEnd="290dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/NombreAct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Nombre"
        app:helperText="Trate que sea descriptivo y corto"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20dp"
        app:endIconDrawable="@drawable/ic_baseline_create_24"
        app:layout_constraintStart_toStartOf="@id/Panel"
        app:layout_constraintRight_toRightOf="@id/Panel"
        app:layout_constraintTop_toBottomOf="@id/Panel"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="textPersonName"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripcionPanel"
        app:helperText="Este campo le ayudará a recordar el porque de su actividad"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"
        app:endIconDrawable="@drawable/ic_baseline_create_24"
        app:layout_constraintStart_toStartOf="@id/NombreAct"
        app:layout_constraintRight_toRightOf="@id/NombreAct"
        app:layout_constraintTop_toBottomOf="@id/NombreAct"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="textPersonName"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:id="@+id/FechaInicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha_inicio"
        android:layout_marginTop="25dp"
        style="@style/CardView.Light"
        android:layout_marginHorizontal="25dp"
        android:gravity="center"
        android:textAlignment="textStart"
        android:textSize="26sp"
        android:textColor="@color/purple_700"
        app:layout_constraintStart_toStartOf="@id/descrip"
        app:layout_constraintRight_toRightOf="@id/descrip"
        app:layout_constraintTop_toBottomOf="@id/descrip"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/FechaFin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha_fin"
        android:layout_marginTop="25dp"
        style="@style/CardView.Light"
        android:layout_marginHorizontal="25dp"
        android:gravity="center"
        android:textAlignment="textStart"
        android:textSize="26sp"
        android:textColor="@color/purple_700"
        app:layout_constraintStart_toStartOf="@id/FechaInicio"
        app:layout_constraintRight_toRightOf="@id/FechaInicio"
        app:layout_constraintTop_toBottomOf="@id/FechaInicio"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/btn_guardar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/guardar"
        android:backgroundTint="@color/colorPurple"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@id/FechaFin"
        app:layout_constraintRight_toRightOf="@id/FechaFin"
        app:layout_constraintTop_toBottomOf="@id/FechaFin"/>

    <Button
        android:id="@+id/btn_eliminar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/eliminar"
        android:backgroundTint="@color/colorPurple"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@id/btn_guardar"
        app:layout_constraintRight_toRightOf="@id/btn_guardar"
        app:layout_constraintTop_toBottomOf="@id/btn_guardar"/>






</androidx.constraintlayout.widget.ConstraintLayout>